[gd_scene load_steps=3 format=2]

[ext_resource path="res://AccountViewer.gd" type="Script" id=1]
[ext_resource path="res://lighttheme.tres" type="Theme" id=2]

[node name="AccountCreator" type="Panel"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 1.0
margin_top = -1.0
margin_right = -890.0
margin_bottom = -499.0
theme = ExtResource( 2 )
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer2" type="VBoxContainer" parent="."]
margin_left = 5.0
margin_top = 46.0
margin_right = 381.0
margin_bottom = 217.0
custom_constants/separation = 25
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label_App" type="RichTextLabel" parent="VBoxContainer2"]
margin_right = 376.0
margin_bottom = 24.0
size_flags_horizontal = 3
size_flags_vertical = 3
text = "Applicaton"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label_Email" type="RichTextLabel" parent="VBoxContainer2"]
margin_top = 49.0
margin_right = 376.0
margin_bottom = 73.0
size_flags_horizontal = 3
size_flags_vertical = 3
text = "Email For Account"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label_User" type="RichTextLabel" parent="VBoxContainer2"]
margin_top = 98.0
margin_right = 376.0
margin_bottom = 122.0
size_flags_horizontal = 3
size_flags_vertical = 3
text = "Username For Account"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label_Acc" type="RichTextLabel" parent="VBoxContainer2"]
margin_top = 147.0
margin_right = 376.0
margin_bottom = 171.0
size_flags_horizontal = 3
size_flags_vertical = 3
text = "Password For Account"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label_Title" type="RichTextLabel" parent="."]
margin_left = 7.0
margin_top = 5.0
margin_right = 475.0
margin_bottom = 39.0
size_flags_horizontal = 3
size_flags_vertical = 3
text = "
ACCOUNT VIEWER"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Panel" type="Panel" parent="."]
visible = false
margin_left = 0.857376
margin_top = 222.574
margin_right = 481.857
margin_bottom = 226.574
__meta__ = {
"_edit_use_anchors_": false
}
